tests/kyverno-policies/pod-groups-validation/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-skip
  namespace: test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-skip-len
  namespace: user-test
spec:
  securityContext:
    supplementalGroups: []
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pass
  namespace: user-test
spec:
  securityContext:
    supplementalGroups:
      - 1000
      - 1001
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: test-fail
  namespace: user-test
spec:
  securityContext:
    supplementalGroups:
      - 1002
  containers:
  - name: nginx
    image: nginx:1.12
