tests/kyverno-policies/pod-groups-validation/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pod-groups-validation
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: pod-groups-validation
    rule: pods-user-authorized-for-groups
    resources:
      - test-skip
    kind: Pod
    result: skip
  - policy: pod-groups-validation
    rule: pods-user-authorized-for-groups
    resources:
      - user-test/test-skip-len
    kind: Pod
    result: skip
  - policy: pod-groups-validation
    rule: pods-user-authorized-for-groups
    resources:
      - user-test/test-pass
    kind: Pod
    result: pass
  - policy: pod-groups-validation
    rule: pods-user-authorized-for-groups
    resources:
      - user-test/test-fail
    kind: Pod
    result: fail
