tests/kyverno-policies/pod-groups-validation/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: pod-groups-validation
    rules:
      - name: pods-user-authorized-for-groups
        values:
          userGIDMap.data.user-test: '["1000", "1001"]'
